--- a/public/modules/snippets/views/buttons/button_boolean.html
+++ b/public/modules/snippets/views/buttons/button_boolean.html
@@ -1,4 +1,4 @@
-<div class="snippet" data-ng-controller="ButtonBooleanController" categories="button,boolean">
+<div class="snippet" data-ng-controller="ButtonBooleanController" categories="button,boolean,ready">
     <h4 class="snippet_title">{{snippetId}}</h4>
     <!-- comment -->
     <div class="snippet_body">
