--- a/public/modules/snippets/views/buttons/button_in_tab.html
+++ b/public/modules/snippets/views/buttons/button_in_tab.html
@@ -1,5 +1,5 @@
-<div class="snippet" data-ng-controller="ButtonInTabController" categories="button,tab,icons">
-    <h4 class="snippet_title">{{snippetId}}</h4>
+<div class="snippet" data-ng-controller="ButtonInTabController" categories="button,tab,icons,ready">
+    <h4 class="snippet_title">Connection buttons and tabs</h4>
     <p>Select a tab by setting active binding to true:</p>
     <p>
         <button class="btn btn-default btn-sm" ng-click="tabs[0].active = true">Select second tab</button>
