--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -7,7 +7,7 @@
 			<span class="icon-bar"></span>
 		</button>
 		<a class="navbar-brand" href="/#!/" >
-			<i class="fa fa-newspaper-o fa-lg text-danger"></i>
+			<i class="fa fa-newspaper-o fa-lg btn-danger" ></i>
 		</a>
 
 	</div>
