--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="HomeController">
     <div class="row">
         <div class="col-md-12">
-            <div class="jumbotron">
+            <div>
                 <h1>Angular with bootstrap</h1>
 
                 <p>
@@ -9,7 +9,7 @@
                 </p>
 
                 <p>
-                    <a class="btn btn-primary btn-lg" href="#!/selection" role="button">Learn more</a>
+                    <a class="btn btn-default btn-lg" href="#!/search/" role="button">Learn more</a>
 
                 </p>
             </div>
