--- a/public/modules/snippets/views/tables/table_too_wide.html
+++ b/public/modules/snippets/views/tables/table_too_wide.html
@@ -1,4 +1,4 @@
-<div class="snippet" data-ng-controller="TableTooWideController" categories="table,too,wide">
+<div class="snippet" data-ng-controller="TableTooWideController" categories="table,wide">
     <h4 class="snippet_title">{{sampleId}}</h4>
     <!-- comment -->
     <div class="snippet_body">
