--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -55,10 +55,10 @@
 </head>
 
 
-<body class="ng-cloak">
-<header data-ng-include="'modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
+<body class="ng-cloak intro" >
+<header data-ng-include="'modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-default"></header>
 <section class="content" style="margin-top: 50px">
-    <section class="container">
+    <section class="container ">
 
         {% block content %}{% endblock %}
     </section>
